--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src https:; script-src https://ashmortar.io"
+    Content-Security-Policy = "default-src https:;"
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "geolocation=(self 'https://ashmortar.io)"
