--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src https:; script-src 'unsafe-inline' https:; style-src 'unsafe-inline';"
+    Content-Security-Policy = "default-src https:; script-src https:; style-src 'self';"
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
