--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src https:; script-src https: 'self'; style-src 'self';"
+    Content-Security-Policy = "default-src https:; script-src https: 'unsafe-inline'; style-src 'self' 'unafe-inline';"
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
