--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,7 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "geolocation=(self 'https://ashmortar.io)"
+[[plugins]]
+  package = "@algolia/netlify-plugin-crawler"
+  [plugins.inputs]
+  template = "hierarchical"
